syntax = "proto3";

enum PacketType {
    NONE = 0;
    CHAT = 1;
    WAITING = 2;
}

message ChatPacket {
    int32 sessionId = 1;
    string message = 2;
}

message WaitingPacket {
    int32 waiting_number = 1;
    string message = 2;
}